# tcalc

./: .gitignore  CMakeLists.txt  EndDesign.md  LICENSE.md  README.md  build.sh  knownbugs.md  roadmap.md
cli/: ccmdlpar.c  ccmdlpar.h  exprtree.c  infix_to_rpn.c  infix_tokenizer.c  rpn.c  rpn_tokenizer.c  tcalc.c  tcalc_cli.c  tcalc_cli_common.c  tcalc_cli_common.h  tcalc_cli_eval.c  tcalc_cli_eval_rpn.c  tcalc_cli_infix_tokenizer.c  tcalc_cli_print_exprtree.c  tcalc_cli_progs.h  tcalc_cli_rpn_tokenizer.c  tcalc_repl.c  tokenizer.c
doc/: environment.md  language.md  quickstart.md  snippets.md  syntax.txt  tcalc.md
fuzzer/: fuzzer.c
include/: tcalc.h  tcalc_compdefs.h  tcalc_constants.h  tcalc_context.h  tcalc_darray.h  tcalc_dstring.h  tcalc_error.h  tcalc_eval.h  tcalc_exit.h  tcalc_exprtree.h  tcalc_func.h  tcalc_func_type.h  tcalc_mac.h  tcalc_mem.h  tcalc_parsetree.h  tcalc_string.h  tcalc_tnum.h  tcalc_tokens.h  tcalc_val.h  tcalc_val_func.h  tcalc_vec.h
src/: tcalc_context.c  tcalc_darray.c  tcalc_dstring.c  tcalc_error.c  tcalc_eval.c  tcalc_eval_rpn.c  tcalc_exit.c  tcalc_exprtree.c  tcalc_func.c  tcalc_infix_to_rpn.c  tcalc_mem.c  tcalc_parser.c  tcalc_stradv.c  tcalc_string.c  tcalc_tokenize_infix.c  tcalc_tokenize_rpn.c  tcalc_tokens.c  tcalc_val.c  tcalc_val_func.c
tests/: fuzzer.c
tests/include/: tcalc_tests.h
tests/src/: test_run_all_tests.c  test_tcalc_darray.c  test_tcalc_dstring.c  test_tcalc_eval.c  test_tcalc_rpn_eval.c  test_tcalc_string.c  test_tcalc_tokenize.c
